tests/NormalTests/paczka1/fuzzy1/28802249.err
Error in line 4: 0NG5ZxSMTk A760 47,8
Error in line 6: d7rMoJ A76p 44,8
Error in line 5: 0NG5ZxSMTk S309 61,8
Error in line 11: d7rMoJ A760 0,9
Error in line 16: d7rMoJ S7 43,2
Error in line 13: 1SD1bK75Akr S309 4,7
Error in line 29: S309 A517 40,8
Error in line 27: 0NG5ZxSMTk S7 96,4
